--- a/src/app/pages/admin/planes-suscription-page/planes-suscription-page.component.html
+++ b/src/app/pages/admin/planes-suscription-page/planes-suscription-page.component.html
@@ -1,11 +1,19 @@
-<div class="relative overflow-x-auto shadow-md px-5 md:px-10">
-  <div class="mb-6 text-gray-900 dark:text-white">
-    <h1 class="text-2xl font-semibold">
-      Plan de suscripción
-    </h1>
-    <p>Planes de suscripción para que las tiendas puedan elegir y vender en la plataforma</p>
+<div class="relative overflow-x-auto shadow-md  px-5 pb-5 md:pb-10 md:px-10">
+  <div class="mb-6 mt-2 text-gray-900 dark:text-white flex justify-between ">
+    <div>
+      <h1 class="text-2xl font-semibold">
+        Plan de suscripción
+      </h1>
+      <p>Planes de suscripción para que las tiendas puedan elegir y vender en la plataforma</p>
+    </div>
+    <div>
+      <button data-modal-hide="default-modal" type="button" (click)="openModal()"
+        class="text-white bg-purple-700 ml-4 hover:bg-purple-900 focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-800">
+        Crear nuevo plan
+      </button>
+    </div>
   </div>
-  <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+  <div class="relative overflow-x-auto shadow-md rounded-md">
     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
       <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
         <tr>
@@ -32,7 +40,8 @@
           <td class="px-6 py-4">{{ item.planCoin }} {{ item.planPrice }}</td>
           <td class="px-6 py-4">{{ item.planType }}</td>
           @if (item.promotional === 'true') {
-          <td class="px-6 py-4 font-medium text-gray-900  whitespace-nowrap dark:text-white"> Por {{ item.promDuration }}
+          <td class="px-6 py-4 font-medium text-gray-900  whitespace-nowrap dark:text-white"> Por {{ item.promDuration
+            }}
             días <br> <span class="text-green-600">
               {{ item.percentage }}% de descuento
             </span> </td>
@@ -41,15 +50,195 @@
           }
           <td class="px-6 py-4">{{ item.planDescription }}</td>
           <td class="px-6 py-4">{{ item.planDate }}</td>
-          <td class="px-6 py-4">
-            <button type="button"
-              class="focus:outline-none text-white bg-gray-500 hover:bg-purple-400 hover:cursor-pointer focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-900">
-              Gestionar
-            </button>
+          <td class="relative px-6 py-4">
+            <div class="relative inline-block">
+              <!-- Icono de tres puntos (puedes usar un ícono o texto) -->
+              <button (click)="toggleDropdown(item)" class="text-xl px-2 py-1">
+                <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 4 15">
+                  <path
+                    d="M3.5 1.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 6.041a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 5.959a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z" />
+                </svg>
+              </button>
+              <!-- Dropdown con opciones -->
+              <div *ngIf="openDropdownIndex === item.id"
+                class="absolute right-0 mt-2 w-40 bg-white border border-purple-400 rounded-md shadow-lg z-50 dark:bg-purple-700">
+                <ul class="text-sm text-gray-700 dark:text-gray-200">
+                  <li class="block px-4 py-2 hover:bg-purple-300 dark:hover:bg-purple-600 cursor-pointer">Editar</li>
+                  <li (click)="openModalWar()"
+                    class="block px-4 py-2 hover:bg-purple-300 dark:hover:bg-purple-600 cursor-pointer">Eliminar</li>
+                  @if (item.planState === 'inactivo') {
+                  <li class="block px-4 py-2 hover:bg-purple-300 dark:hover:bg-purple-600 cursor-pointer">Activar</li>}
+                </ul>
+              </div>
+            </div>
           </td>
         </tr>
         }
       </tbody>
     </table>
+  </div>
+</div>
+
+<!-- Modal nuevo Plan -->
+<div id="default-modal" tabindex="-1" aria-hidden="true" [ngClass]="isModalOpen() ? 'block' : 'hidden'"
+  class="overflow-y-auto overflow-x-hidden fixed flex top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+  <div class="relative p-4 w-full max-w-4xl max-h-full">
+    <!-- Modal content -->
+    <div class="relative bg-white rounded-lg shadow-sm dark:bg-gray-700">
+      <!-- Modal header -->
+      <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600 border-gray-200">
+        <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
+          Crear plan de suscripcion
+        </h3>
+        <button type="button" (click)="closeModal()"
+          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+          data-modal-hide="default-modal">
+          <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+          </svg>
+          <span class="sr-only">Close modal</span>
+        </button>
+      </div>
+      <!-- Modal body -->
+      <div class="p-4 md:p-5 space-y-4">
+        <div class="relative overflow-x-auto">
+          <div class="grid grid-cols-1 m-2  md:grid-cols-2 gap-4">
+            <form class="">
+              <div class="mb-5">
+                <label for="base-input" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                  Nombre del plan suscripción
+                </label>
+                <input type="text" id="base-input"
+                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500">
+              </div>
+              <div class="mb-5">
+                <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
+                  message</label>
+                <textarea id="message" rows="4"
+                  class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-purple-500 focus:border-purple-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500"
+                  placeholder="Leave a comment..."></textarea>
+              </div>
+              <div class="mb-5">
+                <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Tipo de
+                  plan</label>
+                <div class="flex ml-2">
+                  <div class="flex items-center me-4 "  (click)="selectedTypePlan ='uso de Tynbiz'" >
+                    <input id="inline-radio" type="radio" value="" name="inline-radio-group"
+                      class="w-4 h-4 text-purple-600 bg-gray-100 border-gray-300 focus:ring-purple-500 dark:focus:ring-purple-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                    <label for="inline-radio" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Uso de
+                      Tynbiz</label>
+                  </div>
+                  <div  class="flex items-center me-4" (click)="selectedTypePlan ='mensual'">
+                    <input id="inline-2-radio" type="radio" value="" name="inline-radio-group"
+                      class="w-4 h-4 text-purple-600 bg-gray-100 border-gray-300 focus:ring-purple-500 dark:focus:ring-purple-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                    <label for="inline-2-radio"
+                      class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Mensual</label>
+                  </div>
+                  <div class="flex items-center me-4" (click)="selectedTypePlan ='anual'">
+                    <input id="inline-checked-radio" type="radio" value="" name="inline-radio-group"
+                      class="w-4 h-4 text-purple-600 bg-gray-100 border-gray-300 focus:ring-purple-500 dark:focus:ring-purple-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                    <label for="inline-checked-radio"
+                      class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Anual</label>
+                  </div>
+                </div>
+              </div>
+              <div *ngIf="selectedTypePlan === 'uso de Tynbiz'" class="mb-5">
+                <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Comisión por usuario (cuando usa sala de tynbiz)</label>
+                <p class="text-sm font-normal text-gray-900 dark:text-white">cuando el usuario usa sala de tynbiz con los productos de tienda,por el tiempo que pasa en sala, a la dueña de tienda se va cobrar</p>
+              </div>
+              <div *ngIf="selectedTypePlan === 'mensual' || selectedTypePlan === 'anual' " class="mb-5">
+<label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Precio plan</label>
+
+              </div>
+              <div class="mb-5">
+                <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Estado</label>
+                <select id="status"
+                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500">
+                  <option ngValue="All" selected>Activo</option>
+                  <option ngValue="En revisión">Inactivo</option>
+                </select>
+              </div>
+              <div class="mb-5">
+                <label class="inline-flex items-center cursor-pointer">
+                  <input type="checkbox" value="" class="sr-only peer" checked>
+                  <span class="text-sm mr-3 font-medium text-gray-900 dark:text-gray-300">Promoción</span>
+                  <div
+                    class="relative w-11 h-6 bg-gray-200 rounded-full peer peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600 dark:peer-checked:bg-blue-600">
+                  </div>
+                </label>
+              </div>
+              <div class=" mb-5 grid grid-cols-1  md:grid-cols-2 gap-4">
+                <div>
+                  <label for="base-input" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                    Descuento
+                  </label>
+                  <div class="relative mb-6">
+                    <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                      %
+                    </div>
+                    <input type="number" id="base-input"
+                      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                  </div>
+                </div>
+                <div>
+                  <label for="base-input" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                    Dias
+                  </label>
+                  <input type="number" id="base-input"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500">
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <!-- Modal footer -->
+      <div class="flex items-center justify-end p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
+
+        <button data-modal-hide="default-modal" type="button" (click)="closeModal()"
+          class="text-white bg-purple-700 ml-4 hover:bg-purple-900 focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-800">
+          Aplicar
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal de advertencia -->
+@if (isModalWarOpen() || isModalOpen()) {
+<div class="fixed inset-0 bg-black opacity-50 z-40" (click)="closeModalWar()"></div>
+}
+<div id="popup-modal" tabindex="-1" [ngClass]="isModalWarOpen() ? 'block' : 'hidden'"
+  class="fixed inset-0 z-50 flex items-center justify-center">
+  <div class="relative p-4 w-full max-w-md max-h-full">
+    <div class="relative bg-white rounded-lg shadow-sm dark:bg-gray-700">
+      <button type="button" (click)="closeModalWar()"
+        class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+        data-modal-hide="popup-modal">
+        <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+        </svg>
+        <span class="sr-only">Close modal</span>
+      </button>
+      <div class="p-4 md:p-5 text-center">
+        <svg class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200" aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+        </svg>
+        <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">¿Estás seguro que deseas eliminar el
+          {{selectedPlan.planName}}? </h3>
+        <button data-modal-hide="popup-modal" type="button" (click)="closeModalWar()"
+          class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+          Si estoy seguro
+        </button>
+        <button data-modal-hide="popup-modal" type="button" (click)="closeModalWar()"
+          class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-200 hover:border-gray-300 hover:text-gray-600 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">No,
+          cancelar</button>
+      </div>
+    </div>
   </div>
 </div>
