--- a/src/app/pages/admin/list-user-page/list-user-page.component.html
+++ b/src/app/pages/admin/list-user-page/list-user-page.component.html
@@ -127,11 +127,43 @@
         </td>
         <td class="px-6 py-4">{{ item.dateCreate | date : "medium" }}</td>
         <td class="px-6 py-4 text-center">
-          <i
-            class="fa-regular fa-pen-to-square p-2 cursor-pointer"
-            (click)="editUser(item.id)"
-          ></i>
-          <i class="fa-solid fa-trash p-2 cursor-pointer"></i>
+          <div class="relative inline-block">
+            <!-- Icono de tres puntos (puedes usar un ícono o texto) -->
+            <button (click)="toggleDropdown(item)" class="text-xl px-2 py-1">
+              <svg
+                class="w-4 h-4 text-gray-500 dark:text-gray-400"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="currentColor"
+                viewBox="0 0 4 15"
+              >
+                <path
+                  d="M3.5 1.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 6.041a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 5.959a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"
+                />
+              </svg>
+            </button>
+            <!-- Dropdown con opciones -->
+            <div
+              *ngIf="openDropdownIndex === item.id"
+              class="absolute right-0 mt-2 w-40 bg-white border border-purple-400 rounded-md shadow-lg z-50 dark:bg-purple-700"
+            >
+              <ul class="text-sm text-gray-700 dark:text-gray-200">
+                <li
+                  class="px-4 py-2 hover:bg-purple-300 dark:hover:bg-purple-600 cursor-pointer flex items-center"
+                  (click)="editUser(item.id)"
+                >
+                  <i class="fa-regular fa-pen-to-square px-4"></i> Editar
+                </li>
+
+                <li
+                  class="px-4 py-2 hover:bg-purple-300 dark:hover:bg-purple-600 cursor-pointer flex items-center"
+                >
+                  <i class="fa-solid fa-trash px-4"></i>
+                  Eliminar
+                </li>
+              </ul>
+            </div>
+          </div>
         </td>
       </tr>
       }
