--- a/src/app/pages/admin/payment-page/payment-page.component.html
+++ b/src/app/pages/admin/payment-page/payment-page.component.html
@@ -1,1 +1,61 @@
-<p>payment-page works!</p>,
+<div class="relative overflow-x-auto shadow-md px-5 md:px-10 2xl:px-30">
+
+  <div class="mb-6 mt-2 flex justify-between">
+    <div>
+      <h1 class="text-2xl font-semibold">Pasarela de pago</h1>
+      <p>
+        las dueñas de las tiendas virtuales para pagar suscrpcion debe usar cualquier metodo de pago
+      </p>
+    </div>
+    <div>
+      <button data-modal-hide="default-modal" type="button"
+        class="text-white bg-purple-700 ml-4 hover:bg-purple-900 focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-800">
+        Ver estadisticas
+      </button>
+    </div>
+  </div>
+  <div class="mb-6 mt-2">
+    <h1 class="text-2xl font-semibold">Metodos de pago</h1>
+    <div class="grid grid-cols-2 md:grid-cols-4 gap-2 m-6">
+      @for (item of listMethods; track item.id) {
+      <div class="flex flex-col h-full">
+        <div
+          class="relative h-36 w-full bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 overflow-hidden flex items-center justify-center">
+          @if (item.img == null) {
+          <h5 class="text-base font-bold text-center text-gray-900 dark:text-white">
+            {{ item.method }}
+          </h5>} @else {
+          <img [src]="item.img" alt="" class="absolute inset-0 h-full w-full object-cover ">
+          }
+        </div>
+        <div class="mt-1">
+          <span [ngClass]="{' text-green-600': item.estate === 'activo', ' text-red-600': item.estate === 'inactivo' }">
+            {{item.estate}}
+          </span>
+        </div>
+      </div>
+      }
+    </div>
+
+  </div>
+  <div class="mb-6 mt-2">
+    <h1 class="text-2xl font-semibold">Pagos realizados por tiendas virtuales en suscripccion</h1>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-2 m-6">
+      @for (item of listMethods; track item.id) {
+      <div
+        class="bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 p-4 md:p-6">
+        <h5 class="text-base font-bold leading-none text-gray-900 dark:text-white">
+          {{ item.method }}
+        </h5>
+        <p class="text-gray-600 font-bold text-3xl dark:text-gray-400 my-2">
+          {{ item.users }}
+        </p>
+        <p class="text-gray-600 dark:text-gray-400 my-2">
+          {{ item.description }}
+        </p>
+      </div>
+      }
+    </div>
+
+  </div>
+</div>
