--- a/src/app/pages/admin/plan-suscrip-page/plan-suscrip-page.component.html
+++ b/src/app/pages/admin/plan-suscrip-page/plan-suscrip-page.component.html
@@ -5,6 +5,7 @@
     </h1>
   </div>
   <!-- busqueda -->
+
   <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
       <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
@@ -41,14 +42,83 @@
           <td class="px-6 py-4">{{ item.metodPay }}</td>
           <td class="px-6 py-4">{{ item.starPlan }} a {{ item.endPlan }}</td>
           <td class="px-6 py-4">
-            <button type="button"
-              class="focus:outline-none w-24 text-white bg-gray-500 hover:bg-purple-400 hover:cursor-pointer focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-900">
-              Ver mas
-            </button>
+             <div class="relative inline-block">
+                <!-- Icono de tres puntos (puedes usar un ícono o texto) -->
+                <button (click)="toggleDropdown(item)" class="text-xl px-2 py-1">
+                  <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 4 15">
+                    <path
+                      d="M3.5 1.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 6.041a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 5.959a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z" />
+                  </svg>
+                </button>
+                <!-- Dropdown con opciones -->
+                @if (openDropdownIndex === item.id) {
+                <div
+                  class="absolute right-0 mt-2 w-40 bg-white border border-purple-400 rounded-md shadow-lg z-50 dark:bg-purple-700">
+                  <ul class="text-sm text-gray-700 dark:text-gray-200">
+                    <li (click)="openbillingHistory(item.id)"
+                      class="block px-4 py-2 hover:bg-purple-300 dark:hover:bg-purple-600 cursor-pointer">
+                      Ver periodo facturación
+                    </li>
+                  </ul>
+                </div>
+                }
+              </div>
           </td>
         </tr>
         }
       </tbody>
     </table>
   </div>
+  <!-- Paginación -->
+    <div class="flex justify-between">
+      <div class="flex my-6 items-center">
+        <p class="text-sm text-gray-700">Filas por página:</p>
+        <select [(ngModel)]="itemsPerPage" (ngModelChange)="onItemsPerPageChange($event)"
+          class="justify-center ml-2 block w-14 py-0 px-2 h-8 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-purple-500 focus:border-purple-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500">
+          @for (option of [5, 10, 15, 20, 50]; track $index) {
+          <option [value]="option">{{ option }}</option>
+          }
+        </select>
+      </div>
+      <div class="justify-end">
+        <nav aria-label="Page navigation example " class="my-6 flex justify-center">
+          <ul class="flex items-center -space-x-px h-8 text-sm">
+            <li>
+              <button (click)="prevPage()" [disabled]="currentPage === 1"
+                class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+                <span class="sr-only">Previous</span>
+                <svg class="w-2.5 h-2.5 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                  fill="none" viewBox="0 0 6 10">
+                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M5 1 1 5l4 4" />
+                </svg>
+              </button>
+            </li>
+            <!-- Números de página generados dinámicamente -->
+            <li *ngFor="let page of [].constructor(totalPages()); let i = index">
+              <button (click)="setPage(i + 1)" [ngClass]="{
+                  'z-10 text-purple-600 border-purple-400 bg-purple-300 hover:bg-purple-100 hover:text-purple-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white':
+                    currentPage === i + 1,
+                  'text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white':
+                    currentPage !== i + 1
+                }" class="flex items-center justify-center px-3 h-8 leading-tight border">
+                {{ i + 1 }}
+              </button>
+            </li>
+            <li>
+              <button (click)="nextPage()" [disabled]="currentPage === totalPages()"
+                class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+                <span class="sr-only">Next</span>
+                <svg class="w-2.5 h-2.5 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                  fill="none" viewBox="0 0 6 10">
+                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="m1 9 4-4-4-4" />
+                </svg>
+              </button>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
 </div>
