--- a/src/app/pages/stores/client-store-page/client-store-page.component.html
+++ b/src/app/pages/stores/client-store-page/client-store-page.component.html
@@ -1,1 +1,228 @@
-<p>client-store-page works!</p>,
+<div class="relative overflow-x-auto shadow-md sm:rounded-lg px-10 m-4">
+  <div
+    class="mb-6 text-gray-900 dark:text-white flex items-center justify-between"
+  >
+    <h1 class="text-2xl font-semibold">Clientes en sala</h1>
+  </div>
+  <!-- Búsqueda general -->
+  <div class="flex items-center justify-between pb-4">
+    <div class="relative">
+      <div
+        class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none"
+      >
+        <svg
+          class="w-4 h-4 text-gray-500 dark:text-gray-400"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 20 20"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"
+          />
+        </svg>
+      </div>
+      <input
+        type="text"
+        [(ngModel)]="search"
+        placeholder="Buscar usuario"
+        class="block w-full p-2.5 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-purple-500 focus:border-purple-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500"
+      />
+    </div>
+    <div class="flex items-center">
+      <span class="mx-4 text-gray-500">Fechas</span>
+      <input
+        type="date"
+        [(ngModel)]="startDate"
+        placeholder="Fecha desde"
+        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500"
+      />
+      <span class="mx-4 text-gray-500">al</span>
+      <input
+        type="date"
+        [(ngModel)]="endDate"
+        placeholder="Fecha hasta"
+        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500"
+      />
+    </div>
+    <!-- busqueda por estado -->
+    <div class="relative w-48">
+      <select
+        id="status"
+        (ngModelChange)="filterByStatus($event)"
+        [(ngModel)]="isState"
+        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500"
+      >
+        <option ngValue="All" selected>Todos</option>
+        <option ngValue="Activo">Activo</option>
+        <option ngValue="Inactivo">Inactivo</option>
+      </select>
+    </div>
+  </div>
+
+  <table
+    class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400 overflow-x-auto"
+  >
+    <thead
+      class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
+    >
+      <tr>
+        <th scope="col" class="px-6 py-3 text-center">Nombre</th>
+        <th scope="col" class="px-6 py-3">Tarifa</th>
+        <th scope="col" class="px-6 py-3">Tiempo en sala</th>
+        <th scope="col" class="px-6 py-3">Acompañado</th>
+        <th scope="col" class="px-6 py-3">Fecha de creación</th>
+        <th scope="col" class="px-6 py-3 text-center">Acciones</th>
+      </tr>
+    </thead>
+    <tbody>
+      @for (item of paginatedData; track item.id) {
+      <tr
+        class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+      >
+        <th
+          scope="row"
+          class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white min-w-[300px]"
+        >
+          <div class="grid grid-cols-6 gap-1">
+            <div class="relative col-span-1">
+              <img
+                class="w-10 h-10 rounded-full"
+                [src]="item.img"
+                alt="Rounded avatar"
+              />
+              <!-- Punto rojo indicador de estado -->
+              @if (item.sala.status === 'Activo') {
+              <div
+                class="size-4 bg-red-500 border-2 border-white rounded-full absolute top-7 right-0"
+              ></div>
+              }
+            </div>
+            <div class="col-span-5">
+              {{ item.nameUser }}<br />
+              <span class="text-gray-500 dark:text-gray-400">{{
+                item.email
+              }}</span>
+            </div>
+          </div>
+        </th>
+        <td class="px-6 py-4">{{ item.sala.tarifa | soles }}</td>
+        <td class="px-6 py-4">{{ item.sala.timeInSale }}</td>
+        <td class="px-6 py-4">{{ item.sala.otherPerson }}</td>
+        <td class="px-6 py-4">{{ item.sala.dateCreate | date : "medium" }}</td>
+        <td class="px-6 py-4 text-center">
+          <div class="relative inline-block">
+            <!-- Icono de tres puntos (puedes usar un ícono o texto) -->
+            <button (click)="toggleDropdown(item)" class="text-xl px-2 py-1">
+              <svg
+                class="w-4 h-4 text-gray-500 dark:text-gray-400"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="currentColor"
+                viewBox="0 0 4 15"
+              >
+                <path
+                  d="M3.5 1.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 6.041a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 5.959a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"
+                />
+              </svg>
+            </button>
+            <!-- Dropdown con opciones -->
+            <div
+              *ngIf="openDropdownIndex === item.id"
+              class="absolute right-0 mt-2 w-40 bg-white border border-purple-400 rounded-md shadow-lg z-50 dark:bg-purple-700"
+            >
+              <ul class="text-sm text-gray-700 dark:text-gray-200">
+                <li
+                  class="px-4 py-2 hover:bg-purple-300 dark:hover:bg-purple-600 cursor-pointer flex items-center"
+                >
+                  <i class="fa-regular fa-pen-to-square px-4"></i> Editar
+                </li>
+
+                <li
+                  class="px-4 py-2 hover:bg-purple-300 dark:hover:bg-purple-600 cursor-pointer flex items-center"
+                >
+                  <i class="fa-solid fa-trash px-4"></i>
+                  Eliminar
+                </li>
+              </ul>
+            </div>
+          </div>
+        </td>
+      </tr>
+      }
+    </tbody>
+  </table>
+  <!-- Paginación -->
+  <nav aria-label="Page navigation example " class="my-6 flex justify-center">
+    <ul class="flex items-center -space-x-px h-8 text-sm">
+      <li>
+        <button
+          (click)="prevPage()"
+          [disabled]="currentPage === 1"
+          class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+        >
+          <span class="sr-only">Previous</span>
+          <svg
+            class="w-2.5 h-2.5 rtl:rotate-180"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 6 10"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M5 1 1 5l4 4"
+            />
+          </svg>
+        </button>
+      </li>
+      <!-- Números de página generados dinámicamente -->
+      <li *ngFor="let page of [].constructor(totalPages()); let i = index">
+        <button
+          (click)="setPage(i + 1)"
+          [ngClass]="{
+            'z-10 text-purple-600 border-purple-400 bg-purple-300 hover:bg-purple-100 hover:text-purple-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white':
+              currentPage === i + 1,
+            'text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white':
+              currentPage !== i + 1
+          }"
+          class="flex items-center justify-center px-3 h-8 leading-tight border"
+        >
+          {{ i + 1 }}
+        </button>
+      </li>
+
+      <li>
+        <button
+          (click)="nextPage()"
+          [disabled]="currentPage === totalPages()"
+          class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+        >
+          <span class="sr-only">Next</span>
+          <svg
+            class="w-2.5 h-2.5 rtl:rotate-180"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 6 10"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="m1 9 4-4-4-4"
+            />
+          </svg>
+        </button>
+      </li>
+    </ul>
+  </nav>
+</div>
